--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "element-ui": "^2.4.8",
     "moment": "^2.22.2",
+    "v-distpicker": "^1.0.20",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
