--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "element-ui": "^2.4.8",
     "moment": "^2.22.2",
+    "qrcode": "^1.3.0",
     "v-distpicker": "^1.0.20",
     "vue": "^2.5.17",
+    "vue-qart": "^2.2.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
